### Version 2.2.0 (git)
- updated for new 2.3.0 standarts
- fixed social template
- updated for core bootstrap 3.4.1 from 3.1	
- fixed featurebox css (result bootstrap version change)
- fixed https for imported css  
- removed theme user template


### Version 2.1.2 (git)– 
- Fix hardcoded date on project page with shortcode
- Added theme shortcode cmenu_button_text
- Fix hardcoded client name with theme shortcode
- Added language support for theme prefs (it needs e107 2.1.5)


### Version 2.1.1 – January 18th, 2017