@@ -16,10 +16,10 @@
 /*	################################################################
 	1. GENERAL STRUCTURES
 ################################################################# */
-	* { 
-		margin: 0;
-		padding: 0px;
-	} 
+* { 
+	margin: 0;
+	padding: 0px;
+} 
 
 body { 
 	background: #ffffff; 
