@@ -34,5 +34,9 @@
 		</div><! --/row -->
 	</div><! --/container -->
 </div><! --/footerwrap -->
-
+<div class="sitedisclaimer">
+    <div class="container">
+       {SITEDISCLAIMER}
+    </div>
+  </div>
 </body>
