@@ -61,7 +61,7 @@ class theme_shortcodes extends e_shortcode
 		// ONLY ONE BOOK WITH TEMPLATE PORTFOLIO
 	
 		$book = e107::getDb()->retrieve("SELECT chapter_id, chapter_name FROM #page_chapters WHERE chapter_visibility IN (" . USERCLASS_LIST . ") 
-	  AND chapter_template = 'portfolio'  LIMIT 1", true );
+	 	 AND chapter_template = 'portfolio'  LIMIT 1", true );
 		$page['book_id'] = $book[0]['chapter_id'];
 		$page['book_name'] = $book[0]['chapter_name'];
 	
@@ -126,9 +126,27 @@ class theme_shortcodes extends e_shortcode
   function sc_teammembers()
 	{ 
 	if($userclass = e107::pref('theme', 'teammemberclass', false)) {
+		
 		$teammembers = e107::getDb()->retrieve('user', '*', ' WHERE FIND_IN_SET('.$userclass.',user_class) ', TRUE);
 		
-		$TM_TEMPLATE = e107::getCoreTemplate('user', 'teammember');
+		$TM_TEMPLATE =  '
+		{SETIMAGE: w=600}
+		<div class="col-lg-3 col-md-3 col-sm-3">  
+			<div class="he-wrap tpl6">
+			{USER_PICTURE}
+				<div class="he-view">
+					<div class="bg a0" data-animate="fadeIn">
+						<h3 class="a1" data-animate="fadeInDown">Contact Me:</h3>
+						<a href="mailto:{USER_EMAIL_LINK}" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-envelope"></i></a>
+						<a href="{USER_TWITTER}" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-twitter"></i></a>
+					</div><!-- he bg -->
+				</div><!-- he view -->      
+			</div><!-- he wrap -->
+			<h4>{USER_REALNAME}</h4>
+			<h5 class="ctitle">{USER_CUSTOMTITLE}</h5>
+			<p>{USER_SIGNATURE}</p>
+			<div class="hline"></div>
+		</div><! --/col-lg-3 -->  ';
 		
 		$user_shortcodes = e107::getScBatch('user');
 		 
@@ -140,8 +158,8 @@ class theme_shortcodes extends e_shortcode
 		  { 
 		      
 			$user_shortcodes->setVars($teammember);  
-		  $TEAMMEMBER_TEXT     = e107::getParser()->parseTemplate($TM_TEMPLATE , TRUE, $user_shortcodes);
-		  $text .= $TEAMMEMBER_TEXT;
+			$TEAMMEMBER_TEXT     = e107::getParser()->parseTemplate($TM_TEMPLATE , TRUE, $user_shortcodes);
+			$text .= $TEAMMEMBER_TEXT;
 		  }
 		}
 		else
@@ -212,155 +230,185 @@ function sc_portfolioitems()
 	return $body . $filter . $text;
 	}
 	
-	function sc_bootstrap_branding()
+ 
+ 	/*---------------------- user box  ********************************************/
+	// {USERBOX}
+	function sc_userbox($parm = null) 
 	{
-		$pref = e107::pref('theme', 'branding');
-
-		switch($pref)
-		{
-			case 'logo':
-
-				return e107::getParser()->parseTemplate('{SITELOGO: h=30}',true);
-
-			break;
-
-			case 'sitenamelogo':
-
-				return "<span class='pull-left'>".e107::getParser()->parseTemplate('{SITELOGO: h=30}',true)."</span>".SITENAME;
-
-			break;
-
-			case 'sitename':
-			default:
-
-				return SITENAME;
-
-			break;
-		}
-
-	}
-
-
-
-	function sc_bootstrap_nav_align()
-	{
-		$pref = e107::pref('theme', 'nav_alignment');
-
-		if($pref == 'right')
-		{
-			return "navbar-right";
-		}
-		else
-		{
+		//return nothing for log in user
+		if(!USERID) {
 			return "";
 		}
-	}
 
-		function sc_bootstrap_usernav($parm = '')
+		if(!empty($parm['layout']))
 		{
-
-			include_lan(e_PLUGIN . "login_menu/languages/" . e_LANGUAGE . ".php");
-
-			$tp = e107::getParser();
-		// $login_menu_shortcodes
-			require(e_PLUGIN . "login_menu/login_menu_shortcodes.php"); // don't use 'require_once'.
-
-			$userReg = defset('USER_REGISTRATION');
-
-			if(!USERID) // Logged Out.
-			{
-				$text = '';
-
-				if($userReg == 1)
-				{
-					$signuplink = '<li><a class="nav-link" href="' . e_SIGNUP . '">' . LAN_LOGINMENU_3 . '</a></li>';
-				}
-
-				$socialActive = e107::pref('core', 'social_login_active');
-
-				if(!empty($userReg) || !empty($socialActive)) // e107 or social login is active.
-				{
-					$loginlink = '
-			  	    <a class="dropdown-toggle" href="#" id="dropdownLoginLink" data-toggle="dropdown" aria-haspopup="true"
-					   aria-expanded="true" title="' . LAN_LOGINMENU_51 . '"> ' . LAN_LOGINMENU_51 . '</a>';
-					$sociallogin = '{SOCIAL_LOGIN: size=2x&label=1}';
-				}
-				else
-				{
-					return '';
-				}
-
-
-				if(!empty($userReg)) // value of 1 or 2 = login okay.
-				{
-
-					//	global $sc_style; // never use global - will impact signup/usersettings pages.
-					//	$sc_style = array(); // remove any wrappers.
-
-					$loginform = '
-					<form method="post" onsubmit="hashLoginPassword(this);return true" action="' . e_REQUEST_HTTP . '" accept-charset="UTF-8">
-					<p>{LM_USERNAME_INPUT}</p>
-					<p>{LM_PASSWORD_INPUT}</p>
-					<div class="form-group"></div>
-					{LM_IMAGECODE_NUMBER}
-					{LM_IMAGECODE_BOX}
-					<div class="checkbox">
-					<label class="string optional" for="autologin"><input style="margin-right: 10px;" type="checkbox" name="autologin" id="autologin" value="1">
-					' . LAN_LOGINMENU_6 . '</label>
-					</div>
-					<input class="btn btn-primary btn-block" type="submit" name="userlogin" id="userlogin" value="' . LAN_LOGINMENU_51 . '">
-					';
-
-					$loginform .= '
-					<a href="{LM_FPW_LINK=href}" class="btn btn-default btn-sm  btn-block">' . LAN_LOGINMENU_4 . '</a>
-					<a href="{LM_RESEND_LINK=href}" class="btn btn-default btn-sm  btn-block">' . LAN_LOGINMENU_40 . '</a>
-					';
-
-					$loginform .= "<p></p>
-					</form>
-					";
-				}
-
-				$text = ' ' .
-					$signuplink .
-					'<li class="divider-vertical"></li>
-					<li class="dropdown">
-				     ' . $loginlink . $sociallogin . '
-					   <div class="dropdown-menu" aria-labelledby="dropdownLoginLink" style="min-width:250px; padding: 15px; padding-bottom: 0px;">
-						  ' . $loginform . '
-					   </div>
-				</li>';
-
-				$text .= '';
-
-				return $tp->parseTemplate($text, true, $login_menu_shortcodes);
-			}
-
-
-			// Logged in.
-			//TODO Generic LANS. (not theme LANs)
-			if(ADMIN)
-			{
-				$adminlink = '<li><a href="' . e_ADMIN_ABS . '"><span class="fa fa-cogs"></span> ' . LAN_LOGINMENU_11 . '</a></li>';
-			}
-			else
-			{
-				$adminlink = '';
-			}
-
-
-			$text = '
-		     <li class="dropdown">{PM_NAV}</li>
-				 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">{SETIMAGE: w=20} {USER_AVATAR: shape=circle} ' . USERNAME . ' <b class="caret"></b></a>
-			   <ul class="dropdown-menu">
-				  <li><a href="{LM_USERSETTINGS_HREF}"><span class="fa fa-cog"></span> ' . LAN_SETTINGS . '</a></li>
-				  <li><a href="{LM_PROFILE_HREF}"><span class="fa fa-user"></span> ' . LAN_LOGINMENU_13 . '</a></li>
-				  ' . $adminlink . '
-				  <li><a href="' . e_HTTP . 'index.php?logout"><span class="fa fa-sign-out"></span> ' . LAN_LOGOUT . '</a></li>
-			   </ul>';
-
-			return $tp->parseTemplate($text, true, $login_menu_shortcodes);
+			$tmpl= $parm['layout'];
 		}
+    
+		e107::includeLan(e_PLUGIN."login_menu/languages/".e_LANGUAGE.".php");
+		require(e_PLUGIN."login_menu/login_menu_shortcodes.php"); // don't use 'require_once'.
+		$userReg = defset('USER_REGISTRATION');
+ 
+		if($userReg==1)
+		{
+		$userNameLabel = !empty($parm['username']) ? USERNAME : '';
+		
+		$link1 = e107::getParser()->parseTemplate('{LM_USERSETTINGS_HREF}',true,$login_menu_shortcodes);
+		$link2 = e107::getParser()->parseTemplate('{LM_PROFILE_HREF}',true,$login_menu_shortcodes);
+		
+		
+		$links[1] = array( 
+				'link_name'			=> '{USER_AVATAR: w=20&h=20&crop=1}   ',
+				'link_url'			=> '#', // 'news.php?extend.'.$row['news_id'],
+				'link_description'	=> LAN_LOGINMENU_51,
+				'link_button'		=> '',
+				'link_category'		=> '',
+				'link_order'		=> '',
+				'link_parent'		=> 0,
+				'link_open'			=> '',
+				'link_class'		=> 253,
+			'link_sub'      => array()
+				);
+			
+			$links[1]['link_sub'][0] = array(
+				'link_name'			=> LAN_SETTINGS,
+				'link_url'			=> $link1, // 'news.php?extend.'.$row['news_id'],
+				'link_description'	=>  LAN_SETTINGS,
+				'link_button'		=> 'fa-cog.glyph',
+				'link_category'		=> '',
+				'link_order'		=> '',
+				'link_parent'		=> 1,
+				'link_open'			=> '',
+				'link_class'		=> 253
+				);
+			
+			$links[1]['link_sub'][1] = array(
+				'link_name'			=>   LAN_LOGINMENU_13,
+				'link_url'			=> $link2, // 'news.php?extend.'.$row['news_id'],
+				'link_description'	=>  LAN_LOGINMENU_13,
+				'link_button'		=> 'fa-user.glyph',
+				'link_category'		=> '',
+				'link_order'		=> '',
+				'link_parent'		=> 1,
+				'link_open'			=> '',
+				'link_class'		=> 253
+				);        
+			
+			if(ADMIN) 
+			{
+				/* $links[1]['link_sub'][2] = array(
+				'link_name'			=>   '<div class="dropdown-divider"></div>',
+				);  */
+		
+		
+				$links[1]['link_sub'][3] = array(
+				'link_name'			=>   LAN_LOGINMENU_11,
+				'link_url'			=> e_ADMIN_ABS,  
+				'link_description'	=>  LAN_LOGINMENU_11,
+				'link_button'		=> 'fa-cogs.glyph',
+				'link_category'		=> '',
+				'link_order'		=> '',
+				'link_parent'		=> 1,
+				'link_open'			=> '',
+				'link_class'		=> 253
+				); 	
+			} 
+		
+		
+		$links[1]['link_sub'][4] = array(
+				'link_name'			=>   LAN_LOGOUT,
+				'link_url'			=> "index.php?logout", // 'news.php?extend.'.$row['news_id'],
+				'link_description'	=>  LAN_LOGOUT,
+				'link_button'		=> 'fa-sign-out.glyph',
+				'link_category'		=> '',
+				'link_order'		=> '',
+				'link_parent'		=> 1,
+				'link_open'			=> '',
+				'link_class'		=> 253
+				);        
+			
+		}
+    
+		$tmpl 			= vartrue($tmpl, 'main');
+		$template		= e107::getCoreTemplate('navigation', $tmpl);	
+		
+		$text =  e107::getNav()->render($links, $template);
+	
+		return e107::getParser()->parseTemplate($text,true,$login_menu_shortcodes);
+ 
+    
+  	}
+
+	/*---------------------- member login ********************************************/
+  	// {MEMBER_LOGIN}
+	function sc_member_login($parm = null) 
+	{
+		//return nothing for log in user
+		if(USERID) 
+		{
+		return "";
+		}
+    
+    	if(!empty($parm['layout']))
+		{
+			$tmpl= $parm['layout'];
+		}
+    
+		e107::includeLan(e_PLUGIN."login_menu/languages/".e_LANGUAGE.".php");
+		//require(e_PLUGIN."login_menu/login_menu_shortcodes.php"); // don't use 'require_once'.
+		$userReg = defset('USER_REGISTRATION');
+ 
+		if($userReg==1)
+		{    
+	
+			$links[] = array(
+			'link_name'			=> LAN_LOGINMENU_3,
+			'link_url'			=> e_SIGNUP, // 'news.php?extend.'.$row['news_id'],
+			'link_description'	=> LAN_LOGINMENU_3,
+			'link_button'		=> '',
+			'link_category'		=> '',
+			'link_order'		=> '',
+			'link_parent'		=> 0,
+			'link_open'			=> '',
+			'link_class'		=> 252
+			);
+	
+		}
+         
+		if(!empty($userReg)) // value of 1 or 2 = login okay. 
+		{ 
+			$links[] = array(
+			'link_name'			=> LAN_LOGINMENU_51,
+			'link_url'			=> e_LOGIN, // 'news.php?extend.'.$row['news_id'],
+			'link_description'	=> LAN_LOGINMENU_51,
+			'link_button'		=> '',
+			'link_category'		=> '',
+			'link_order'		=> '',
+			'link_parent'		=> 0,
+			'link_open'			=> '',
+			'link_class'		=> 25 
+			);
+		} 
+      
+		$tmpl 			= vartrue($tmpl, 'main');
+		$template		= e107::getCoreTemplate('navigation', $tmpl);	
+		
+		$text =  e107::getNav()->render($links, $template);
+	
+		$text = e107::getParser()->parseTemplate($text, true, $login_menu_shortcodes);
+	
+		return $text;
+	}
+	  
+
+	function sc_bootstrap_usernav($parm = '')
+	{
+
+		$text = $this->sc_member_login();
+		$text .= $this->sc_userbox();
+		return $text;
+
+	}
 
 	function sc_chaptersef()
 	{
@@ -372,15 +420,15 @@ function sc_portfolioitems()
   /* general shortcode for any theme, on progress, just workaround for now */	
  	function sc_theme_pagetitle($parm='')
 	{   
-   if(defined('e_PAGETITLE') )  { return e_PAGETITLE; }
-   if(defined('PAGE_NAME') )  { return PAGE_NAME; }
-   if((strpos(e_REQUEST_URI, 'login') !== false)) {return LAN_TO_LOGINPAGENAME;}
-  }
+		if(defined('e_PAGETITLE') )  { return e_PAGETITLE; }
+		if(defined('PAGE_NAME') )  { return PAGE_NAME; }
+		if((strpos(e_REQUEST_URI, 'login') !== false)) {return LAN_TO_LOGINPAGENAME;}
+	}
 	
 	function sc_user_twitter($parm='')
 	{		 
  
-   	$sc   = e107::getScBatch('user');
+   		$sc   = e107::getScBatch('user');
 		$data = $sc->getVars();				
 		$ue = new e107_user_extended;     	
 		$text = $ue->user_extended_getvalue($data['user_id'] , 'user_twitter');   
@@ -390,7 +438,7 @@ function sc_portfolioitems()
 	function sc_pagetags($parm='')
 	{
 		$sc   = e107::getScBatch('page', null, 'cpage');
-  	$data = $sc->getVars(); 
+  		$data = $sc->getVars(); 
 		
 		$tmp = explode(",",$data['page_metakeys']);
 		$words = array();
@@ -433,8 +481,8 @@ function sc_portfolioitems()
 	
 	function sc_menu_button_url($parm='') {
 		$sc   = e107::getScBatch('page', null, 'cpage');
-  	$data = $sc->getVars(); 
-  	return e107::getParser()->replaceConstants($data['menu_button_url']);
+  		$data = $sc->getVars(); 
+  		return e107::getParser()->replaceConstants($data['menu_button_url']);
 	}
 	
 	/**
@@ -443,7 +491,7 @@ function sc_portfolioitems()
 	function sc_cpagerelated($array=array())
 	{
 		$sc   = e107::getScBatch('page', null, 'cpage');
-  	$data = $sc->getVars(); 
+  		$data = $sc->getVars(); 
 
 		if(!varset($array['types']))
 		{
@@ -454,11 +502,11 @@ function sc_portfolioitems()
 
 		$template = e107::getCoreTemplate('page', $templateID, 'related');
 
-    $tags = $data['page_metakeys'];
+    	$tags = $data['page_metakeys'];
 		$tags = str_replace(', ',',', $tags);
-    e107::setRegistry('core/form/related',$tags); 
+    	e107::setRegistry('core/form/related',$tags); 
     
-    $parm = array(
+   		$parm = array(
 			'limit' => 5,   /* always + 1 */
 			'types' => 'page');
  
@@ -521,16 +569,11 @@ function sc_portfolioitems()
 	
 	
 	function sc_cmenu_button_text()
-  {
-    $sc   = e107::getScBatch('page', null, 'cpage');
-    $data = $sc->getVars();
-    return vartrue($data['menu_button_text'],'');
-  }
+  	{
+		$sc   = e107::getScBatch('page', null, 'cpage');
+		$data = $sc->getVars();
+		return vartrue($data['menu_button_text'],'');
+  	}
   
 }
-
-
-
-
-
-?>
+ 
